--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-xcode_project: Putometro.xcworkspace
+xcode_project: Putometro.xcodeproj
 xcode_scheme: PutometroTests.scheme
 xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone 7
 osx_image: xcode10.2
